objects/Quality_Certificate__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CertificateType__c</fullName>
        <formula>Text(Certificate_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CertificateType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Title__c</fullName>
        <label>Certificate Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Type__c</fullName>
        <label>Certificate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BizSafe Star</fullName>
                </value>
                <value>
                    <fullName>ISO</fullName>
                </value>
                <value>
                    <fullName>ISO 14001</fullName>
                </value>
                <value>
                    <fullName>ISO14001 and OHSAS18001</fullName>
                </value>
                <value>
                    <fullName>ISO 15048</fullName>
                </value>
                <value>
                    <fullName>ISO 9001</fullName>
                </value>
                <value>
                    <fullName>ISO TS16949</fullName>
                </value>
                <value>
                    <fullName>ODS-Free</fullName>
                </value>
                <value>
                    <fullName>OHSAS</fullName>
                </value>
                <value>
                    <fullName>OHSAS 18001</fullName>
                </value>
                <value>
                    <fullName>SONY Green Partners</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>ISO 50001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAB</label>
        <referenceTo>FAB__c</referenceTo>
        <relationshipName>Quality_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_Assign__c</fullName>
        <formula>FAB__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fab Assign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fabs__c</fullName>
        <label>Fab</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 35</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>Fab 9</fullName>
                </value>
                <value>
                    <fullName>Fab 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenTextIdPublish__c</fullName>
        <label>OpenTextIdPublish</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenTextId__c</fullName>
        <label>OpenTextId</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>&apos;QC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <label>ISO/Others Certificate</label>
    <listViews>
        <fullName>Quality_Certificate_View</fullName>
        <columns>NAME</columns>
        <columns>Certificate_Title__c</columns>
        <columns>Fabs__c</columns>
        <columns>CertificateType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Stage__c</columns>
        <columns>Expiry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>ISO/Other Certificates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CERT-{000}</displayFormat>
        <label>Cert No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISO/Others Certificates</pluralLabel>
    <recordTypes>
        <fullName>CertificationQualityWithUploadQc</fullName>
        <active>true</active>
        <label>CertificationQualityWithUploadQc</label>
    </recordTypes>
    <recordTypes>
        <fullName>CertificationQualityafterUploadQcApproval</fullName>
        <active>true</active>
        <label>CertificationQualityafterUploadQcApproval</label>
    </recordTypes>
    <recordTypes>
        <fullName>QC_wo_Approval</fullName>
        <active>true</active>
        <label>QC wo Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality_Default</fullName>
        <active>true</active>
        <label>Quality Default</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Approver_required_in_case_of_approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Approver__c),Approval_Required__c==true)</errorConditionFormula>
        <errorDisplayField>Approver__c</errorDisplayField>
        <errorMessage>Approver is required for Approval process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_Date_cant_be_less_than_today</fullName>
        <active>true</active>
        <description>Expiration Date cant be less than today</description>
        <errorConditionFormula>Expiry_Date__c&lt;=TODAY()</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiration Date cant be less than today or today</errorMessage>
    </validationRules>
</CustomObject>